--- a/Root/index.html
+++ b/Root/index.html
@@ -3,8 +3,7 @@
 <head>
 <!-- character encoding declaration if need -->
 <meta charset="UTF-8">
-<!-- title of the document -->
-<title>My Book :: Login</title>
+
 	<!-- jquery -->
 	<script src="lib/jquery/jquery-2.1.1.min.js"></script>
 	<!-- bootstrap -->
@@ -18,7 +17,8 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/directive.js"></script>
 	<script type="text/javascript" src="js/home.js"></script>	
-	<script type="text/javascript" src="js/feed.js"></script>	
+	<script type="text/javascript" src="js/feed.js"></script>
+	<script type="text/javascript" src="js/profile.js"></script>	
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <!-- content of the document -->
