--- a/Root/header.html
+++ b/Root/header.html
@@ -1,4 +1,4 @@
-<div class="app-header" data-ng-controller="headerController as header">
+<div class="app-header" data-ng-controller="headerController as header" data-ng-init="header.validateAuthentication();">
 	<nav class="navbar navbar-default navbar-static-top navbar-fixed-top" role="navigation">
 		<div class="container">
 			<div class="col-md-5">
@@ -22,7 +22,7 @@
 					<button type="submit" class="btn btn-primary">{{header.strings.signin}}</button>
 				</form>
 				<div data-ng-hide="!header.credential.signedin">
-					Welcome {{header.credential.username}}! [<a href="">Sign Out</a>]
+					Welcome {{header.credential.username}}! [<a href data-ng-click="header.signout();">Sign Out</a>]
 				</div>
 			</div>
 		</div>
