--- a/Root/page-home.html
+++ b/Root/page-home.html
@@ -1,9 +1,17 @@
 <div class="home" data-ng-controller="homeController as home">
-	<div class="col-md-2">
+	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#feedMenu">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+	<div class="col-md-2" id="feedMenu">
 		<ul class="nav nav-pills nav-stacked" role="tablist" data-ng-repeat="menu in home.menu">
-		  <li role="presentation" data-ng-class="{active: home.activemenu == menu.name}"><a href="#">{{menu.name}}</a></li>
+		  <li id="menu{{$index}}" role="presentation" data-ng-class="{active: home.activemenu == menu.name}" 
+			data-ng-click="home.activemenu = menu.name"><a href>{{menu.name}}</a></li>
 		</ul>
 	</div>
+	
 	<div class="col-md-10">
 		<div data-ng-show="home.activemenu == 'Feed'" data-ng-controller="feedController as feed">
 			<div class="text-center">
@@ -16,14 +24,62 @@
 						placeholder="{{feed.strings.feed}}">
 					</div>
 					<button type="submit" class="btn btn-primary">{{feed.strings.post}}</button>
-						<div animate remove="remove($index)" ng-repeat="feed in feeds" ng-class-odd="'odd'" ng-class-even="'even'" class="feed">
-							<div class="glyphicon glyphicon-remove close-icon"></div>
+						<div  ng-repeat="feed in feeds" ng-class-odd="'odd'" ng-class-even="'even'" class="feed jumbotron">
+							<div animate remove="remove($index)" class="glyphicon glyphicon-remove close-icon"></div>
 							<div id="image" class="feed-img"><img src="img/book-review.gif" width="100" height="60"></div>
 							<div class="feed-txt">{{feed}}</div>
 							<div> {{date | date:'dd-MM-yyyy hh:mm a'}}</div>
 						</div>
 				</form>
 			</div>
+		</div>
+		<div class="profile" data-ng-show="home.activemenu == 'Profile'" data-ng-controller="profileController as profile">
+			<div class="alert alert-info" data-ng-show="profile.profileSaved">Profile successfully saved!</div>
+			<form class="form" role="form" name="profileForm" 
+				data-ng-submit="profile.validateProfile();">
+				<div class="form-group">
+					<input type="text" invalid-message="{{profile.strings.name_required}}"
+					data-ng-model="profile.profile.name" 
+					class="form-control form-control-inline" id="name" data-ng-maxlength=255 required 
+					placeholder="{{profile.strings.name}}">
+				</div>
+				<div class="form-group">
+					<input type="number" invalid-message="{{profile.strings.age_required}}"
+					data-ng-model="profile.profile.age" 
+					class="form-control form-control-inline" id="name" data-ng-min=20 data-ng-max=40 data-ng-maxlength=2 required 
+					placeholder="{{profile.strings.age}}">
+				</div>
+				<div class="form-group">
+					<input type="tel" invalid-message="{{profile.strings.phone_required}}"
+					data-ng-model="profile.profile.phone" 
+					class="form-control form-control-inline" id="phone" data-ng-maxlength=10 required 
+					placeholder="{{profile.strings.phone}}">
+				</div>
+				<div class="form-group">
+					<input type="email" invalid-message="{{profile.strings.email_required}}"
+					data-ng-model="profile.profile.email" 
+					class="form-control form-control-inline" id="email" data-ng-maxlength=255 required 
+					placeholder="{{profile.strings.email}}">
+				</div>
+				<div class="form-group">
+					<textarea class="form-control" 
+					invalid-message="{{profile.strings.address_required}}" 
+					data-ng-model="profile.profile.address" 
+					placeholder="{{profile.strings.address}}"
+					rows="5" id="address" required></textarea>
+				</div>
+				<div class="form-group">
+					<div class="col-md-3">
+						<input type="file" id="profileImage" 
+						placeholder="{{profile.strings.image}}"
+						fileread="profile.profile.image">
+					</div>
+					<div class="col-md-9">
+						<image data-ng-src="{{profile.profile.image}}" height="144" width="144"/>
+					</div>
+				</div>
+				<button type="submit" class="btn btn-primary">{{profile.strings.save}}</button>
+			</form>
 		</div>
 	</div>
 </div>
