--- a/Root/index.html
+++ b/Root/index.html
@@ -23,8 +23,8 @@
 </head>
 <!-- content of the document -->
 <body>
-	<div data-ng-include="'header.html'"></div>
+	<div data-ng-include="'Templates/header.html'"></div>
 	<div class="contentwrap" resize data-ng-view></div>
-	<div data-ng-include="'footer.html'"></div>
+	<div data-ng-include="'Templates/footer.html'"></div>
 </body>
 </html> 
